table_3/results/Cache2k-CF_pre_nullaway_wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:136: error: [NullAway] initializer method does not guarantee @NonNull fields keyType (line 131), valueType (line 132) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  private Cache2kBuilder(Cache2kConfig<K, V> cfg) {
          ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:168: error: [NullAway] initializer method does not guarantee @NonNull fields keyType (line 131), valueType (line 132) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  private Cache2kBuilder( @Nullable CacheType<K> keyType,  @Nullable CacheType<V> valueType) {
          ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:133: error: [NullAway] assigning @Nullable expression to @NonNull field
  private  Cache2kConfig<K, V> config = null;
                               ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:134: error: [NullAway] assigning @Nullable expression to @NonNull field
  private  CacheManager manager = null;
                        ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:169: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.keyType = keyType;
                 ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/Cache2kBuilder.java:170: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.valueType = valueType;
                   ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-pre/src/src/main/java/org/cache2k/config/CacheTypeCapture.java:103: error: [NullAway] method returns @Nullable, but superclass method org.cache2k.config.CacheType.getComponentType() returns @NonNull
    public  CacheType<?> getComponentType() {
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 697ms
7
